# rimportrait

./: .gitignore  LICENSE  README.md  pyinstaller-macos.spec  pyinstaller-windows.spec  pyproject.toml
.github/workflows/: release.yml
docs/samples/: kidhesk-action.txt  mila-anime.txt  mila-default.txt  mila-family.txt  mila-propaganda.txt  mila-renaissance.txt
rimportrait/: __init__.py  cli.py  records.py  render.py  wealth.py
rimportrait/extract/: __init__.py  body_parts.py  defs.py  load.py  mods.py  pawn.py
rimportrait/translate/: _common.py  apparel.py  colordef.py  favorite_color.py  genes.py  hair.py  hediffs.py  inventory.py  stuff.py  weapons.py  xenotype.py
scripts/: run_gui.py
tests/: CLAUDE.md  test_body_parts.py  test_chemical_state.py  test_colors.py  test_extract_integration.py  test_inventory.py  test_mods.py  test_render.py  test_stuff.py  test_wealth.py  test_xenotype.py
