[project]
name = "rimportrait"
version = "0.1.0"
description = "Generate AI-image prompt context blocks from RimWorld .rws saves."
requires-python = ">=3.11"
dependencies = ["lxml>=5.0"]

[project.scripts]
rimportrait = "rimportrait.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rimportrait"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.ruff]
line-length = 80
indent-width = 2

[tool.ruff.format]
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.basedpyright]
include = ["rimportrait", "tests"]
extraPaths = ["."]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportUnusedCallResult = "none"
reportImplicitStringConcatenation = "none"
