[project]
name = "rimportrait-workspace"
version = "0"
description = "Workspace root for rimsave + rimportrait."
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
rimsave = { workspace = true }
rimportrait = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.0", "rimsave", "rimportrait"]

[tool.ruff]
line-length = 80
indent-width = 2

[tool.ruff.format]
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["packages/rimsave/tests", "packages/rimportrait/tests"]

[tool.basedpyright]
include = [
  "packages/rimsave/rimsave",
  "packages/rimportrait/rimportrait",
  "packages/rimsave/tests",
  "packages/rimportrait/tests",
]
extraPaths = ["packages/rimsave", "packages/rimportrait"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportUnusedCallResult = "none"
reportImplicitStringConcatenation = "none"
